Fix menu gap on mobile

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -8,6 +8,11 @@
     background-color: $colour-white;
     box-shadow: .0625rem .0625rem .375rem -.25rem $colour-black;
     // box-shadow: 1px 1px 6px 4px #0F0A0A;
+    transition: top .3s ease-in-out;
+
+    @include is("open") {
+        top: 0;
+    }
 
     &__top {
         @extend %padding-x;
