--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -11,22 +11,25 @@
     bottom: 0;
     width: 100%;
     overflow-y: auto;
+    border-top: 1px solid #eaeaea;
 
     @include has("js") {
         position: fixed;
         transform: translateX(0);
         background-color: $colour-white;
 
-        &.is-open {
-            transform: translateX(100%);
-        }
 
         @media ( min-width: $tablet ) {
             position: static;
         }
     }
 
+    @include is("open") {
+        transform: translateX(100%);
+    }
+
     @media ( min-width: $tablet ) {
+        border-top: none;
         display: flex;
     }
 
